--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
-CLOUD_NAME =dxmnof6qn
-API_KEY =172591178262527
-API_SECRET= adXLCXer9lIRPodx6g-Gek9Xiy0
-API_ENVIRONMENT_VARIABLE=cloudinary://172591178262527:adXLCXer9lIRPodx6g-Gek9Xiy0@dxmnof6qn
-MONGO_URI='mongodb+srv://haseeb:haseeb123@cluster0.m4ivpbe.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
+CLOUD_NAME =YOUR_SECRET_VARIABLE
+API_KEY =YOUR_SECRET_VARIABLE
+API_SECRET= YOUR_SECRET_VARIABLE
+API_ENVIRONMENT_VARIABLE=YOUR_SECRET_VARIABLE
+MONGO_URI=YOUR_SECRET_VARIABLE
